--- a/src/main/resources/templates/profile/changePassword.html
+++ b/src/main/resources/templates/profile/changePassword.html
@@ -179,6 +179,8 @@
           <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="/MyEvents">My Events</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/registrations">Registrations</a></li>
           </ul>
         </li>
         <li><a href="/pricing">Pricing</a></li>
@@ -197,7 +199,7 @@
         <img th:if="${user != null and user.profilePicture != null}" th:src="${user.profilePicture}" class="profile-picture" alt="Profile Picture" style="width: 30px; height: 30px;">
         <img th:unless="${user != null and user.profilePicture != null}" th:src="'https://www.pngkey.com/png/detail/115-1150152_default-profile-picture-avatar-png-green.png'" class="profile-picture" alt="Profile Picture" style="width: 40px; height: 40px;">
       </a>
-      <a th:if="${user == null}" href="/signin">
+      <a th:if="${roles == null}" href="/signin">
         <img th:src="'https://www.pngkey.com/png/detail/115-1150152_default-profile-picture-avatar-png-green.png'" class="profile-picture" alt="Profile Picture" style="width: 40px; height: 40px;">
       </a>
     </div>
