Fixed Recognition bugs.

--- a/src/main/resources/templates/profile/changePassword.html
+++ b/src/main/resources/templates/profile/changePassword.html
@@ -173,11 +173,10 @@
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
-        <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
-          <a href="/createEvent">Create Event</a></li>
         <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}" class="dropdown">
           <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
+            <li><a href="/createEvent">Create Event</a></li>
             <li><a href="/MyEvents">My Events</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="/registrations">Registrations</a></li>
