--- a/src/main/resources/templates/Events/modifyEvent.html
+++ b/src/main/resources/templates/Events/modifyEvent.html
@@ -117,13 +117,13 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/events">Events</a></li>
-                <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}">
-                    <a href="/createEvent">Create Event</a>
-                </li>
                 <li th:if="${roles != null and (roles.contains('ADMIN') or roles.contains('SUPER_ADMIN'))}" class="dropdown">
                     <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
+                        <li><a href="/createEvent">Create Event</a></li>
                         <li><a href="/MyEvents">My Events</a></li>
+                        <li><a href="/dashboard">Dashboard</a></li>
+                        <li><a href="/registrations">Registrations</a></li>
                     </ul>
                 </li>
                 <li><a href="/pricing">Pricing</a></li>
@@ -176,10 +176,7 @@
                         <img th:src="@{'data:image/jpeg;base64,' + ${eventDTO.imageBase64}}" alt="Current Event Image" style="max-width: 200px; margin-top: 10px;" />
                     </div>
                 </div>
-                <div class="mb-3 form-check">
-<!--                    <input type="checkbox" class="form-check-input" id="facialRecognition" name="facialRecognition" th:checked="${eventDTO.facialRecognition}">-->
-                    <label class="form-check-label" for="facialRecognition">Enable Facial Recognition Verification</label>
-                </div>
+
                 <div id="sessionsContainer">
                     <h4>Sessions</h4>
                     <div th:each="sess, iterStat : ${eventDTO.sessions}" class="session-container" th:id="'session-' + ${iterStat.index}">
