--- a/src/main/resources/templates/profile/myInfos.html
+++ b/src/main/resources/templates/profile/myInfos.html
@@ -176,7 +176,7 @@
           <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
             <li><a href="/createEvent">Create Event</a></li>
-            <li><a href="/MyEvents">My Events</a></li>
+            <li><a href="/myEvents">My Events</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
             <li><a href="/registrations">Registrations</a></li>
           </ul>
