--- a/src/main/resources/templates/Events/createEvent.html
+++ b/src/main/resources/templates/Events/createEvent.html
@@ -252,7 +252,7 @@
                     <a href="#"><span>Admin Resources</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                     <ul>
                         <li><a href="/createEvent">Create Event</a></li>
-                        <li><a href="/MyEvents">My Events</a></li>
+                        <li><a href="/myEvents">My Events</a></li>
                         <li><a href="/dashboard">Dashboard</a></li>
                         <li><a href="/registrations">Registrations</a></li>
                     </ul>
@@ -342,6 +342,12 @@
                             <div class="col-md-4 mb-3">
                                 <label for="placeName-0" class="form-label">Place Name</label>
                                 <input type="text" class="form-control" id="placeName-0" name="sessions[0].place.name" required>
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                <div class="form-check">
+                                    <input type="checkbox" class="form-check-input" id="facialDetection-0" name="sessions[0].facialDetection">
+                                    <label class="form-check-label" for="facialDetection-0">Enable Facial Detection</label>
+                                </div>
                             </div>
                             <div class="col-md-4 mb-3">
                                 <label for="villeName-0" class="form-label">City</label>
@@ -474,6 +480,12 @@
                     <div class="col-md-4 mb-3">
                         <label for="placeName-${sessionCount}" class="form-label">Place Name</label>
                         <input type="text" class="form-control" id="placeName-${sessionCount}" name="sessions[${sessionCount}].place.name" required>
+                    </div>
+                    <div class="col-md-4 mb-3">
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input" id="facialDetection-${sessionCount}" name="sessions[${sessionCount}].facialDetection">
+                            <label class="form-check-label" for="facialDetection-${sessionCount}">Enable Facial Detection</label>
+                        </div>
                     </div>
                     <div class="col-md-4 mb-3">
                         <label for="villeName-${sessionCount}" class="form-label">City</label>
